chore: vandalize project for JPF verification (java 8, loop limits, no time, no random)