@@ -8,6 +8,8 @@ import pcd.ass01.poool.model.board.P2d;
 import pcd.ass01.poool.model.board.V2d;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class MassiveBoardConf implements BoardConf {
@@ -18,20 +20,19 @@ public class MassiveBoardConf implements BoardConf {
 
 	@Override
 	public List<Ball> getPlayerBall() {
-		return List.of(
-		);
+		return Collections.emptyList();
 	}
 
 	@Override
 	public List<Ball> getSmallBalls() {
-		var ballRadius = 1.0 / (N_COLS*1.5);
-        var balls = new ArrayList<Ball>();
+			double ballRadius = 1.0 / (N_COLS * 1.5);
+				List<Ball> balls = new ArrayList<Ball>();
 
     	for (int row = 0; row < N_ROWS; row++) {
     		for (int col = 0; col < N_COLS; col++) {
-        		var px = -1.0 + ballRadius + col * ballRadius*3;
-        		var py =  row * ballRadius*3;
-        		var b = factory.getSmallBall(new P2d(px, py), ballRadius, 0.25, new V2d(0,0));
+					double px = -1.0 + ballRadius + col * ballRadius * 3;
+					double py = row * ballRadius * 3;
+					Ball b = factory.getSmallBall(new P2d(px, py), ballRadius, 0.25, new V2d(0, 0));
             	balls.add(b);    			
     		}
     	}		
@@ -41,7 +42,7 @@ public class MassiveBoardConf implements BoardConf {
 
 	@Override
 	public List<Hole> getHoles() {
-		return List.of(
+		return Arrays.asList(
 				new Hole(new P2d(-0.9, 0.9), 0.1),
 				new Hole(new P2d(0.9, 0.9), 0.1)
 		);
