@@ -8,8 +8,10 @@ import pcd.ass01.poool.model.board.P2d;
 import pcd.ass01.poool.model.board.V2d;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Random;
+//import java.util.Random;
+import java.util.stream.Collectors;
 
 public class PoolBoardConf implements BoardConf {
 
@@ -33,7 +35,7 @@ public class PoolBoardConf implements BoardConf {
 
 	@Override
 	public List<Ball> getPlayerBall() {
-		return List.of(
+		return Arrays.asList(
 				factory.getPlayerBall(new P2d(-0.2, -0.75), 0.03, 2.0, new V2d(0, 0), PlayerType.MOUSE),
 				factory.getPlayerBall(new P2d(0.2, -0.75), 0.03, 2.0, new V2d(0, 0), PlayerType.BOT),
 				factory.getPlayerBall(new P2d(0.4, -0.75), 0.03, 2.0, new V2d(0, 0), PlayerType.BOT)
@@ -45,12 +47,12 @@ public class PoolBoardConf implements BoardConf {
 	public List<Ball> getSmallBalls() {
 		return generateTriangle().stream()
 			.map(p -> factory.getSmallBall(p, BALL_RADIUS, BALL_MASS, new V2d(0, 0)))
-			.toList();
+			.collect(Collectors.toList());
 	}
 
 	@Override
 	public List<Hole> getHoles() {
-		return List.of(
+		return Arrays.asList(
 			new Hole(new P2d(-1, -1), 0.1),
 			new Hole(new P2d(1, -1), 0.1),
 			new Hole(new P2d(-1, 1), 0.1),
@@ -65,16 +67,16 @@ public class PoolBoardConf implements BoardConf {
 
 	private static List<P2d> generateTriangle() {
 		List<P2d> points = new ArrayList<>();
-		Random rand = new Random(42);
+		//Random rand = new Random(42);
 		double centerDistance = 2 * BALL_RADIUS*1.1;
 		double rowHeight = BALL_RADIUS * Math.sqrt(3.0)*1.1;
 
 		for (int row = 0; row < NUM_LAYERS; row++) {
-			double yOffset = row * rowHeight + rand.nextDouble() * 0.004 - 0.002; // Small random vertical offset
+			double yOffset = row * rowHeight + 0.5 * 0.004 - 0.002; // Small random vertical offset
 			double xStartOffset = -((row * centerDistance) / 2.0);
 
 			for (int col = 0; col <= row; col++) {
-				double xOffset = xStartOffset + (col * centerDistance) + rand.nextDouble() * 0.004 - 0.002;
+				double xOffset = xStartOffset + (col * centerDistance) + 0.5 * 0.004 - 0.002;
 				points.add(TRIANGLE_VERTEX.sum(new V2d(xOffset, yOffset)));
 			}
 		}
