@@ -5,6 +5,7 @@ import pcd.ass01.poool.model.board.P2d;
 import pcd.ass01.poool.model.board.V2d;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class BallFactory {
@@ -19,14 +20,20 @@ public class BallFactory {
 
     public Ball getPlayerBall(P2d pos, double mass, double radius, V2d vel, PlayerType type) {
         switch (type) {
-            case BOT -> botIds.add(id);
-            case MOUSE -> this.mouseId = id;
+            case BOT:
+                botIds.add(id);
+                break;
+            case MOUSE:
+                this.mouseId = id;
+                break;
+            default:
+                break;
         }
         return new PlayerBall(pos, mass, radius, vel, id++);
     }
 
     public List<Integer> getBotIds() {
-        return List.copyOf(botIds);
+        return Collections.unmodifiableList(new ArrayList<Integer>(botIds));
     }
 
     public int getMousePlayerId() {
